# git-grabber-rs

./: Cargo.toml  README.md  config.yaml
src/lib/: lib.rs
src/lib/git_grabber/: config.rs
