[package]
name = "git-grabber-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.18.1"
resolve-path = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

[[bin]]
name = "git-grabber-rs"
path = "src/bin/cli.rs"

[lib]
name = "git_grabber"
path = "src/lib/lib.rs"

[source.crates-io]
replace-with = "vendored-sources"

[source.vendored-sources]
directory = "vendor"
